--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,1 +1,50 @@
+blinker==1.6.2
 CacheControl==0.13.1
+cachetools==5.3.1
+certifi==2023.7.22
+cffi==1.15.1
+charset-normalizer==3.2.0
+click==8.1.7
+cryptography==41.0.4
+Deprecated==1.2.14
+firebase-admin==6.2.0
+Flask==2.3.3
+gcloud==0.18.3
+google-api-core==2.12.0
+google-api-python-client==2.101.0
+google-auth==2.23.0
+google-auth-httplib2==0.1.1
+google-cloud-core==2.3.3
+google-cloud-firestore==2.12.0
+google-cloud-storage==2.11.0
+google-crc32c==1.5.0
+google-resumable-media==2.6.0
+googleapis-common-protos==1.60.0
+grpcio==1.58.0
+grpcio-status==1.58.0
+httplib2==0.22.0
+idna==3.4
+itsdangerous==2.1.2
+Jinja2==3.1.2
+jwcrypto==1.5.0
+MarkupSafe==2.1.3
+msgpack==1.0.6
+oauth2client==4.1.3
+proto-plus==1.22.3
+protobuf==4.24.3
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+pycparser==2.21
+pycryptodome==3.19.0
+PyJWT==2.8.0
+pyparsing==3.1.1
+Pyrebase4==4.7.1
+python-jwt==4.0.0
+requests==2.29.0
+requests-toolbelt==0.10.1
+rsa==4.9
+six==1.16.0
+uritemplate==4.1.1
+urllib3==1.26.16
+Werkzeug==2.3.7
+wrapt==1.15.0
