--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,11 +5,17 @@ certifi==2023.7.22
 cffi==1.15.1
 charset-normalizer==3.2.0
 click==8.1.7
+colorama==0.4.6
+cors==1.0.1
 cryptography==41.0.4
 Deprecated==1.2.14
+filelock==3.13.1
 firebase-admin==6.2.0
 Flask==2.3.3
+Flask-Cors==4.0.0
+future==0.18.3
 gcloud==0.18.3
+gevent==23.9.1
 google-api-core==2.12.0
 google-api-python-client==2.101.0
 google-auth==2.23.0
@@ -20,6 +26,7 @@ google-cloud-storage==2.11.0
 google-crc32c==1.5.0
 google-resumable-media==2.6.0
 googleapis-common-protos==1.60.0
+greenlet==3.0.1
 grpcio==1.58.0
 grpcio-status==1.58.0
 httplib2==0.22.0
@@ -39,12 +46,17 @@ pycryptodome==3.19.0
 PyJWT==2.8.0
 pyparsing==3.1.1
 Pyrebase4==4.7.1
+PySocks==1.7.1
 python-jwt==4.0.0
 requests==2.29.0
+requests-file==1.5.1
 requests-toolbelt==0.10.1
 rsa==4.9
 six==1.16.0
+tldextract==5.0.1
 uritemplate==4.1.1
 urllib3==1.26.16
 Werkzeug==2.3.7
 wrapt==1.15.0
+zope.event==5.0
+zope.interface==6.1
