--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
-    "@react-navigation/native": "^6.0.2",
+    "@react-navigation/native": "^6.0.0",
+    "@react-navigation/stack": "^6.0.0",
     "dotenv": "^16.3.1",
-    "expo": "~49.0.8",
+    "expo": "^49.0.16",
     "expo-font": "~11.4.0",
     "expo-linking": "~5.0.2",
     "expo-router": "2.0.0",
@@ -30,6 +31,7 @@
     "react-native": "0.72.4",
     "react-native-dotenv": "^3.4.9",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
     "react-native-web": "~0.19.6"
