--- a/screens/tsconfig.json
+++ b/screens/tsconfig.json
@@ -1,25 +1,15 @@
-import { NavigationContainer } from '@react-navigation/native';
-import { createNativeStackNavigator } from '@react-navigation/native-stack';
-import LoginScreen from './LoginScreen';
-import SignupScreen from './SignupScreen';
-import ChatScreen from './ChatScreen';
-import Home from './Home';
- 
-
-const Stack = createNativeStackNavigator();
-
-
-const navigation = () => {
-  return (
-    // <NavigationContainer>
-      <Stack.Navigator initialRouteName ="LoginScreen">
-        <Stack.Screen options={{ title: 'Login Screen' }}name="LoginScreen"  component = {LoginScreen} />
-        <Stack.Screen options={{ title: 'Signup Screen' }}name="SignupScreen" component = {SignupScreen} /> 
-        <Stack.Screen options={{ title: 'Chat Screen' }}name="ChatScreen" component = {ChatScreen} /> 
-        <Stack.Screen options={{ title: 'Home' }}name="Home" component = {Home} /> 
-      </Stack.Navigator>
-    // </NavigationContainer>
-  );
+{
+  "extends": "expo/tsconfig.base",
+  "compilerOptions": {
+    "jsx": "react",
+    "strict": true,
+    "target": "es6",
+    "module": "commonjs",
+  },
+  "include": [
+    "**/*.ts",
+    "**/*.tsx",
+    ".expo/types/**/*.ts",
+    "expo-env.d.ts"
+  ]
 }
-
-export default navigation;
