--- a/backend/firebase_sdk.json
+++ b/backend/firebase_sdk.json
@@ -1,5 +1,5 @@
 {
-"apiKey": "AIzaSyATqO_ShgMNVA3SMf541EbEWOTw82eewGM",
+"apiKey": "",
 "authDomain": "chatbot-75704.firebaseapp.com",
 "projectId": "chatbot-75704",
 "storageBucket": "chatbot-75704.appspot.com",
